tcosconfig (0.3~rc1) unstable; urgency=low

  * NOT RELEASE
  * New design, more small
  * Add template (tcos.conf) system
  * Rewrite ConfigReader.py using a dictionary for data
  * Save data in /etc/tcos/template (don't edit tcos.conf)
  * Fix GUI freeze when exec gentcos

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Sun, 7 Apr 2008 14::17:34 +0200

tcosconfig (0.2.12) unstable; urgency=low

  * tcosconfig.glade
    - Change TCOS_WEP to TCOS_WIRELESS_KEY for WEP/WPA 

 -- Ignacio Vidal <vidal_joshur@gva.es>  Fri, 29 Feb 2008 23:54:06 +0100

tcosconfig (0.2.11) unstable; urgency=low

  * Allow to select distribution (Debian or Ubuntu)
  * Configure other inputs with distributions defaults (one click to build)
  * Update template and translations

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Sun, 27 Jan 2008 20:02:34 +0100

tcosconfig (0.2.10) unstable; urgency=low

  * TcosChrootBuilder.py:
    - Change kernel version on the fly when select other distro

 -- Ignacio Vidal <vidal_joshur@gva.es>  Mon, 24 Dec 2007 04:43:25 +0100

tcosconfig (0.2.9) unstable; urgency=low

  * ConfigReader.py:
    - Save TCOS_APPEND with \"
  * TcosGui.py:
    - Not remove spaces in cleanvar() if spaces is False

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Sun, 09 Dec 2007 19:03:16 +0100

tcosconfig (0.2.8) unstable; urgency=low

  * shared.py
    - Add English US keyboard
  * tcosconfig.glade:
    - Add new var TCOS_WEP (Wireless key in WEP mode)
  * Update tcos.conf testing conf file
  * Update translations and template

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Mon, 03 Dec 2007 17:28:09 +0100

tcosconfig (0.2.7) unstable; urgency=low

  * TcosChrootBuilder.py:
     - Old links causes problems with normal tcosconfig build after chroot creation

 -- Ignacio Vidal <vidal_joshur@gva.es>  Tue, 27 Nov 2007 15:13:33 +0100

tcosconfig (0.2.6) unstable; urgency=low

  * TcosChrootBuilder.py: