@@ -188,24 +188,22 @@ class ConfigReader:
         f.write("# file generated by tcosconfig on %s\n"%time.ctime())
         f.write("TEMPLATE_DESCRIPTION=\"%s\"\n\n" %_("Template generated by tcosconfig") )
         
-        if self.base_template and self.base_template != os.path.basename(shared.tcosconfig_template):
-            f.write("TCOS_BASED_TEMPLATE=%s\n"%self.base_template)
-            tfile=shared.templates_dir + self.base_template
-            f.write("[ -f %s ] && . %s\n\n"%(tfile, tfile))
-        else:
-            f.write("TCOS_BASED_TEMPLATE=%s\n"%self.confdata['TCOS_BASED_TEMPLATE'])
-            tfile=shared.templates_dir + self.confdata['TCOS_BASED_TEMPLATE']
-            f.write("[ -f %s ] && . %s\n\n"%(tfile, tfile))
-        
-        for key in changeddata:
-            if key == "TCOS_TEMPLATE": continue
-            f.write( "%s=%s\n" %(key, self.confdata[key] )  )
-        
         if len(self.force_settings) > 0:
             f.write("\n# data from old template\n")
             for key in self.force_settings:
                 if not key in ['TEMPLATE_DESCRIPTION', 'TCOS_BASED_TEMPLATE']:
                     f.write( "%s=%s\n" %(key, self.force_settings[key] )  )
+            f.write("\n\n")
+
+        if self.base_template and self.base_template != os.path.basename(shared.tcosconfig_template):
+            f.write("TCOS_BASED_TEMPLATE=%s\n"%self.base_template)
+        else:
+            f.write("TCOS_BASED_TEMPLATE=%s\n"%self.confdata['TCOS_BASED_TEMPLATE'])
+        
+        for key in changeddata:
+            if key == "TCOS_TEMPLATE": continue
+            f.write( "%s=%s\n" %(key, self.confdata[key] )  )
+        
             
         f.close()
         print_debug("file %s saved" %(shared.tcosconfig_template))
