@@ -6,8 +6,10 @@ tcosconfig (0.3~rc1) unstable; urgency=low
   * Rewrite ConfigReader.py using a dictionary for data
   * Save data in /etc/tcos/template (don't edit tcos.conf)
   * Fix GUI freeze when exec gentcos
+  * ConfigReader.py
+    - Add old config before new in tcosconfig.conf save
 
- -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Sun, 7 Apr 2008 14::17:34 +0200
+ -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Tue, 08 Apr 2008 11:24:50 +0200
 
 tcosconfig (0.2.12) unstable; urgency=low
 
